# SmartEnoughCity

./: .gitignore  AIP-59-EV-Charging-Statistics.md  DISRUPTION_FLOW_DIAGRAM.md  README.md  build.gradle  check.sh  compose.yaml  dashboard.html  package-lock.json  stimulation.html
backend/data_handler/: .coveragerc  .dockerignore  .env.development  .env.test  .gitignore  Dockerfile  pyproject.toml
backend/data_handler/src/data_handler/: __main__.py  bus_handler.py  construction_handler.py  csv_utils.py  cycle_handler.py  db.py  disruption_detector.py  logging.py  logging2.py  luas_handler.py  trainstationdata.py  urls.py
backend/data_handler/src/data_handler/bus/: gtfs_parsing_utils.py  live_data_handler.py  models.py  static_data_handler.py  synthetic_ridership.py
backend/data_handler/src/data_handler/car/: __init__.py  car_parsing_utils.py  models.py  process_car_data.py
backend/data_handler/src/data_handler/common/: gtfs_parsing_utils.py
backend/data_handler/src/data_handler/congestion_and_construction/: __init__.py  data_handler.py  data_handler_construction.py  export_utils.py  models.py  parsing_utils.py  tii_api_client.py
backend/data_handler/src/data_handler/cycle/: Dublin Bikes Data Handler Implementation.md  api_client.py  csv_import_handler.py  gbfs_parsing_utils.py  models.py  realtime_handler.py  static_data_handler.py
backend/data_handler/src/data_handler/events/: data_handler.py  models.py  parsing_utils.py  ticketmaster_client.py
backend/data_handler/src/data_handler/pedestrians/: live_data_handler.py  models.py
backend/data_handler/src/data_handler/population/: data_handler.py  models.py
backend/data_handler/src/data_handler/public_spaces/: data_handler.py  models.py  public_space_osmium_handler.py
backend/data_handler/src/data_handler/settings/: api_settings.py  app_settings.py  data_sources_settings.py  database_settings.py
backend/data_handler/src/data_handler/train/: gtfs_parsing_utils.py  models.py  realtime_handler.py  static_data_handler.py  traincontinuousdata.py  trainstationdata.py
backend/data_handler/src/data_handler/tram/: delay_history_handler.py  disruption_service.py  forecast_handler.py  gtfs_parsing_utils.py  models.py  static_data_handler.py
backend/data_handler/tests/: conftest.py  utils.py
backend/data_handler/tests/bus/: test_gtfs_parsing_utils.py  test_live_data_handler.py  test_static_data_handler.py  test_synthetic_ridership.py
backend/data_handler/tests/car/: test_car_parsing_utils.py  test_car_static_data.py
backend/data_handler/tests/common/: test_gtfs_parsing_utils.py
backend/data_handler/tests/congestion_and_construction/: test_data_handler.py  test_tii_api_client.py
backend/data_handler/tests/construction_traffic/: test_data_handler.py  test_parsing_utils.py  test_tii_api_client.py
backend/data_handler/tests/cycle/: test_api_client.py  test_csv_import_handler.py  test_gbfs_parsing_utils.py  test_models.py  test_realtime_handler.py  test_static_data_handler.py
backend/data_handler/tests/data/bus/: TripUpdates.json  vehicles.json
backend/data_handler/tests/data/pedestrians/: channels.csv  channels2.csv  measures.csv  measures2.csv  sites.json  sites2.json
backend/data_handler/tests/data/static_data/GTFS/: agency.txt  calendar.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
backend/data_handler/tests/data/static_data/car/: ESB- EV-charge-point-locations.xlsx  ESB-_EV-charge-point-locations.csv  New Vehicles licensed for first time.csv  New and Second Hand Vehicles.csv  New and second hand car by licensing area.csv  Private Cars Licensed for the First Time - 1998-2013.csv  Private Cars Licensed for the First Time - 2014-15.csv  Private Cars Licensed for the First Time - 2017-2025.csv  SCATSAugust2025.csv  Vehicles Licensed for the first time.csv  charging_demand.csv  dcc_traffic_signals_20221130.csv  ev_charging_points.csv  location_data.geojson  private_car_emissions.csv  sample.txt  scats_sites.csv  traffic_volumes.csv  vehicle_first_time.csv  vehicle_licensing_area.csv  vehicle_new_licensed.csv  vehicle_yearly.csv
backend/data_handler/tests/data/static_data/population/: population_census_2022.csv  small_area_boundaries_2022.geojson
backend/data_handler/tests/data/train/gtfs/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
backend/data_handler/tests/data/tram/cso/: TII03.csv  TOA02.csv  TOA09.csv  TOA11.csv
backend/data_handler/tests/data/tram/gtfs/: agency.txt  calendar.txt  calendar_dates.txt  (+5 more)
backend/data_handler/tests/events/: test_data_handler.py  test_parsing_utils.py
backend/data_handler/tests/pedestrians/: test_live_data_handler.py
backend/data_handler/tests/population/: test_data_handler.py
backend/data_handler/tests/public_spaces/: test_data_handler.py
backend/data_handler/tests/train/: test_gtfs_parsing_utils.py  test_models.py  test_realtime_handler.py  test_static_data_handler.py
backend/data_handler/tests/tram/: test_delay_history_handler.py  test_forecast_handler.py  test_gtfs_parsing_utils.py  test_models.py  test_static_data_handler.py
backend/inference_engine/: .dockerignore  .env.development  .gitignore  Dockerfile  main.py  pyproject.toml  recommender.py  testing_guide.md
backend/inference_engine/recommendation/ev_points/: __init__.py  ev_charging_estimate.py  optimal_calculation.py  pollution_analysis.py  scats_analysing  visualisation.py
backend/inference_engine/recommendation/ev_points/data/: Household_data.csv  charging_demand.csv  charging_point_location.csv  dublin_car_summary.csv
backend/inference_engine/src/inference_engine/: .env.development  config.py  db.py  ev_router.py  ev_service.py  generate_synthetic_data.py  main.py  ml_model.py  test_app.py  train_model.py  train_router.py
backend/inference_engine/src/inference_engine/settings/: api_settings.py  app_settings.py  database_settings.py  db_settings.py
backend/inference_engine/src/inference_engine/setttings/: api_settings.py
backend/inference_engine/tests/: conftest.py  test_app.py  test_train.py
(+818 files in other folders)
