[project]
name = "data-handler"
version = "0.1.0"
description = "SmartEnoughCity Data Handler"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.12.0",
    "requests>=2.26.0",
    "pandas>=1.5.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[project.scripts]
data-handler = "data_handler.__main__:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
