[project]
name = "data-handler"
version = "0.1.0"
description = "SmartEnoughCity Data Handler"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.12.0",
    "requests>=2.26.0",
    "pandas>=1.5.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "xmltodict>=1.0.2",
    "pydantic>=2.12.4",
    "pytest-cov>=7.0.0",
]

[project.scripts]
data-handler = "data_handler.__main__:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "deepdiff>=8.6.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "testcontainers[postgres]>=4.14.1",
]

[tool.ruff.lint]
select = [
    "E", 
    "F", 
    "UP", 
    "B", 
    "SIM", 
    "I",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "A",
    "COM",
    "C4",
    "EM",
    "FIX",
    "FA",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "TID",
    "TD",
    "TC",
    "PTH",
    "FLY",
    "N",
    "PERF",
    "W",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "FURB",
    "RUF",
    "TRY",
]

ignore = [
    "E501",     # Line too long
    "S101",     # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison
    "FBT003",   # Boolean positional value in function call
    "COM812",   # Trailing comma missing (disabled to avoid conflicts with the formatter)
    "FIX002",   # Line contains TODO, consider resolving the issue
    "TD002",    # Missing author in TODO
    "PT011",    # `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception

    # TODO: Remove the below rules from ignored
    # They are ignored temporarily, the errors should be resolved properly
    "T201",     # `print` found
    "BLE001",   # Do not catch blind exception: `Exception`
    "S113",     # Probable use of `requests` call without timeout
    "S314",     # Using `xml` to parse untrusted data is known to be vulnerable to XML attacks; use `defusedxml` equivalents
    "PERF401",  # Use `list.extend` to create a transformed list
]
