[project]
name = "inference-engine"
version = "0.1.0"
description = "SmartEnoughCity Inference Engine"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "fastapi[standard]>=0.121.2",
    "httpx>=0.25.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
