[project]
name = "inference-engine"
version = "0.1.0"
description = "SmartEnoughCity Inference Engine"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "fastapi[standard]>=0.121.2",
    "httpx>=0.25.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.ruff.lint]
select = [
    "E", 
    "F", 
    "UP", 
    "B", 
    "SIM", 
    "I",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "A",
    "COM",
    "C4",
    "EM",
    "FIX",
    "FA",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "TID",
    "TD",
    "TC",
    "PTH",
    "FLY",
    "N",
    "PERF",
    "W",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "FURB",
    "RUF",
    "TRY",
]

ignore = [
    "E501",     # Line too long
    "S101",     # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison
    "TD002",    # Missing author in TODO
    "TD003",    # Missing issue link for this TODO
    "FIX002",   # Line contains TODO
]
